Fixes #38 - Allow popular module pack graph to spill into right hand column on homepage

--- a/src/css/320.less
+++ b/src/css/320.less
@@ -228,6 +228,8 @@ ul.stats {
 		}
 	}
 	#dependency-counts-graph {
+		margin: 0 -15%;
+		
 		text {
 			font-size: 0.875em;
 		}
